# ObjQt

./: .gitignore  Makefile  ObjQt.pro  configure.ac  extra.mk.in
QtCore/: QtChildEvent.h  QtChildEvent.mm  QtCoreApplication.h  QtCoreApplication.mm  QtEvent.h  QtEvent.mm  QtObject.h  QtObject.mm  QtThread.h  QtThread.mm
QtGui/: QtGUIApplication.h  QtGUIApplication.mm  QtGuiApplication.h  QtGuiApplication.mm  QtPaintDevice.h  QtPaintDevice.mm
QtWidgets/: QtAction.h  QtAction.mm  QtApplication.h  QtApplication.mm  QtWidget.h  QtWidget.mm
common/: OFDataArray+QByteArray.h  OFString+QString.h  OFString+QString.mm  QtOwnershipManaging.h  helpers.h
examples/: Makefile  main.mm
src/: Makefile
src/QtCore/: Makefile  QtChildEvent.h  QtChildEvent.mm  QtCoreApplication.h  QtCoreApplication.mm  QtEvent.h  QtEvent.mm  QtObject.h  QtObject.mm  QtThread.h  QtThread.mm
src/QtGui/: Makefile  QtGUIApplication.h  QtGUIApplication.mm  QtPaintDevice.h  QtPaintDevice.mm
src/QtWidgets/: Makefile  QtAbstractButton.h  QtAbstractButton.mm  QtAction.h  QtAction.mm  QtApplication.h  QtApplication.mm  QtGraphicsWidget.h  QtGraphicsWidget.mm  QtPushButton.h  QtPushButton.mm  QtWidget.h  QtWidget.mm
src/common/: Makefile  OFColor+QColor.h  OFColor+QColor.mm  OFData+QByteArray.h  OFData+QByteArray.mm  OFDataArray+QByteArray.h  OFDataArray+QByteArray.mm  OFString+QString.h  OFString+QString.mm  QtOwnershipManaging.h  helpers.h
